# frisk

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/friskcmd/: CMakeLists.txt  main.c
apps/original/: FindInSearchWindow.cpp  FindInSearchWindow.h  Frisk.aps  Frisk.rc  Frisk.sln  Frisk.vcxproj  Frisk.vcxproj.filters  Frisk.wwdb  FriskWindow.cpp  FriskWindow.h  SearchConfig.cpp  SearchConfig.h  SearchContext.cpp  SearchContext.h  SettingsWindow.cpp  SettingsWindow.h  resource.h
lib/: CMakeLists.txt  friskContext.c  friskContext.h
src/: SearchContext.cpp
